<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:contentDescription="@string/background" />
    <!--android:src="@android:color/black" />-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginTop="@dimen/margin_top">

        <LinearLayout
            android:id="@+id/score_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/team_name"
                    android:text="@string/team_a" />

                <TextView
                    android:id="@+id/score_A"
                    style="@style/score"
                    android:text="@string/score_a" />

                <ImageView
                    android:id="@+id/player_A_img"
                    style="@style/hand_image"
                    android:contentDescription="@string/team_a_img"
                    android:src="@drawable/ic_rock" />

            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/team_name"
                    android:text="@string/team_b" />

                <TextView
                    android:id="@+id/score_B"
                    style="@style/score"
                    android:text="@string/score_b" />

                <ImageView
                    android:id="@+id/player_B_img"
                    style="@style/hand_image"
                    android:contentDescription="@string/team_b_img"
                    android:rotationY="180"
                    android:src="@drawable/ic_rock" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/score_panel"
            android:layout_marginTop="@dimen/margin_top"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                style="@style/buttons"
                android:onClick="run"
                android:tag="0"
                android:text="@string/rock" />

            <Button
                style="@style/buttons"
                android:onClick="run"
                android:tag="1"
                android:text="@string/paper" />

            <Button
                style="@style/buttons"
                android:onClick="run"
                android:tag="2"
                android:text="@string/scissors" />

        </LinearLayout>

        <Button
            style="@style/buttons"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="reset"
            android:text="@string/reset" />

    </RelativeLayout>

</RelativeLayout>